Fixed navbar getting cut off with smaller window size

--- a/style-sheet.css
+++ b/style-sheet.css
@@ -41,6 +41,7 @@
 .navbar{
     position: fixed;
     z-index: 99;
+    top: 0;
     width: 100%;
     height: 100%;
     display: none;
